Open links in new tab

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ layout: default
             <b>Projects</b>
         </div>
         <div class="column right">
-            <a href="https://github.com/BazzaDEV/DeltaCore">DeltaCore</a> &nbsp;
-            <a href="https://github.com/BazzaDEV/SimpleMenus">Simple Menus</a> &nbsp;
-            <a href="https://github.com/BazzaDEV/OptimalEnchantTool">OET</a>
+            <a href="https://github.com/BazzaDEV/DeltaCore" target="_blank">DeltaCore</a> &nbsp;
+            <a href="https://github.com/BazzaDEV/SimpleMenus" target="_blank">Simple Menus</a> &nbsp;
+            <a href="https://github.com/BazzaDEV/OptimalEnchantTool" target="_blank">OET</a>
         </div>
     </div>
     <div class="row">
@@ -34,9 +34,9 @@ layout: default
             <b>More</b>
         </div>
         <div class="column-bottom right">
-            <a href="https://go.bazza.dev/resume">Resume</a> &nbsp;
-            <a href="https://notion.bazza.dev/classes">Course Work</a> &nbsp;
-            <a href="https://notion.bazza.dev/leetcode">Leetcode</a>
+            <a href="https://go.bazza.dev/resume" target="_blank">Resume</a> &nbsp;
+            <a href="https://notion.bazza.dev/classes" target="_blank">Course Work</a> &nbsp;
+            <a href="https://notion.bazza.dev/leetcode" target="_blank">Leetcode</a>
         </div>
     </div>
 </div>
